adjusted project css code to fix project 3 appearing uneven from the rest

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,25 +62,25 @@ footer {
     padding: 20px;
 
 }
+
 .project.large {
-    width: calc(100% - 10px); /* Subtract 10px for spacing */
+    width: calc(100% - 10px);
+    /* Subtract 10px for spacing */
 }
 
 .projects-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    /* Adjusted to "flex-start" */
 }
 
 .project {
-    flex: 0 0 calc(50% - 10px); /* Two columns with some spacing */
+    flex: 0 0 calc(50% - 5px);
+    /* Two columns with 5px spacing */
     margin-bottom: 20px;
     transition: transform 0.3s;
     cursor: pointer;
-}
-
-.project:nth-child(2) {
-    flex: 0 0 calc(25% - 5px); /* Adjusted width for the second and third projects */
 }
 
 .project img {
